[package]
name = "lora-e5-dev"
version = "0.1.0"
authors = ["Alessandro Regni <alessandro.regni@studenti.unipr.it>"]
edition = "2018"
description = "Ready to use template for flashing and debugging LoRa-E5-Dev Board"
readme = "README.md"
resolver = "2"

[[bin]]
name = "lora-e5-dev"
test = false
bench = false

[dependencies]
embassy-executor = { version = "0.1.0", git = "https://github.com/davekingdoms/embassy-rs", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/davekingdoms/embassy-rs", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/davekingdoms/embassy-rs", features = ["nightly", "defmt", "stm32wl55jc-cm4", "time-driver-any", "memory-x", "subghz", "unstable-pac", "exti"]  }
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
#git = "https://github.com/davekingdoms/embassy-rs"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
