[package]
name = "lora-e5-dev"
version = "0.1.0"
authors = ["Alessandro Regni <alessandro.regni@studenti.unipr.it>"]
edition = "2021"
description = "Nucleo-stm32wl55jc test using new lora-phy"
readme = "README.md"
resolver = "2"

[[bin]]
name = "lora-e5-dev"
test = false
bench = false

[dependencies]
embassy-sync = { version = "0.2.0", git = "https://github.com/davekingdoms/embassy.git", features = ["defmt"] }
embassy-executor = { version = "0.2.0", git = "https://github.com/davekingdoms/embassy.git", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/davekingdoms/embassy.git", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/davekingdoms/embassy.git", features = ["nightly", "unstable-traits", "defmt", "stm32wl55jc-cm4", "time-driver-any", "memory-x", "unstable-pac", "exti"]  }
embassy-embedded-hal = {version = "0.1.0", git = "https://github.com/davekingdoms/embassy.git" }
embassy-lora = { version = "0.1.0", git = "https://github.com/davekingdoms/embassy.git", features = ["stm32wl", "time", "defmt"] }
lora-phy = { version = "1.1.0" }
lorawan-device = { version = "0.10.0",git = "https://github.com/davekingdoms/rust-lorawan.git", default-features = false, features = ["async", "external-lora-phy"] }
lorawan = { version = "0.7.3", git = "https://github.com/davekingdoms/rust-lorawan.git",default-features = false, features = ["default-crypto"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-storage = "0.3.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nmea = {version = "0.4", default-features = false}
chrono = {version = "0.4.24", default-features = false}
arrayvec ={ version = "0.7.2", default-features = false}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
