[package]
name = "lora-e5-dev"
version = "0.1.0"
authors = ["Alessandro Regni <alessandro.regni@studenti.unipr.it>"]
edition = "2021"
description = "Nucleo-stm32wl55jc test using new lora-phy"
readme = "README.md"
resolver = "2"

[[bin]]
name = "lora-e5-dev"
test = false
bench = false

[dependencies]
# Change stm32wle5jc to your chip name, if necessary. Also update .cargo/config.toml
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32wle5jc", "time-driver-any", "memory-x", "unstable-pac", "exti", "chrono"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0", features = ["defmt"] }

lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", features = ["lorawan-radio"] }
lorawan-device = { git = "https://github.com/lora-rs/lora-rs.git", default-features = false, features = ["embassy-time", "default-crypto", "defmt"] }
lorawan = { git = "https://github.com/lora-rs/lora-rs.git", default-features = false, features = ["default-crypto"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embedded-hal-bus = { version = "0.1.0", features = ["async"]}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
