[package]
name = "mqtt-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drogue-ttn = "0.6.0"
futures = "0.3"
paho-mqtt = "0.12.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
env_logger = "0.10.0"
async-std = "1.12.0"
csv = "1.2.1"
simple_logger ="4.2.0"
log = { version = "^0.4.17", features = ["std"] }